<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mgoulao.myinventory.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/standart_padding">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/placehold" />

        <Button
            android:id="@+id/change_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/edit_button_margin"
            android:background="@color/colorPrimaryLight"
            android:paddingEnd="@dimen/standart_padding"
            android:paddingStart="@dimen/standart_padding"
            android:text="@string/edit_change_image"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standart_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_name" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standart_padding"
            android:hint="@string/edit_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/standart_padding"
        android:paddingEnd="@dimen/standart_padding"
        android:paddingStart="@dimen/standart_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_price" />

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standart_padding"
            android:ems="10"
            android:hint="@string/edit_price"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/standart_padding"
        android:paddingEnd="@dimen/standart_padding"
        android:paddingStart="@dimen/standart_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/standart_padding">

            <ImageButton
                android:id="@+id/quant_remove"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="@dimen/edit_button_margin"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_remove_24dp" />

            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:text="0"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/quant_add"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="@dimen/edit_button_margin"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_add_24dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standart_padding">

        <Button
            android:id="@+id/product_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/edit_split_button_margin"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryLight"
            android:text="@string/edit_sale"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/product_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/edit_split_button_margin"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryLight"
            android:text="@string/edit_order"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
